--- a/x86_64.config
+++ b/x86_64.config
@@ -96,7 +96,6 @@ CONFIG_PACKAGE_luci-app-noddos=y
 CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
-CONFIG_PACKAGE_luci-app-transmission=y
 CONFIG_PACKAGE_luci-app-unbound=y
 CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
@@ -105,7 +104,6 @@ CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
 CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-json=y
@@ -147,10 +145,163 @@ CONFIG_PACKAGE_rblibtorrent=y
 CONFIG_PACKAGE_runc=y
 CONFIG_PACKAGE_srelay=y
 CONFIG_PACKAGE_tini=y
-CONFIG_PACKAGE_transmission-daemon-openssl=y
-CONFIG_PACKAGE_transmission-remote-openssl=y
-CONFIG_PACKAGE_transmission-web=y
-CONFIG_PACKAGE_transmission-web-control=y
+CONFIG_PACKAGE_unbound-daemon=y
+CONFIG_PACKAGE_watchcat=y
+CONFIG_SQLITE_FTS3=y
+CONFIG_SQLITE_RTREE=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
+user1@instance-2:~/lede$ screen -r
+There is no screen to be resumed.
+user1@instance-2:~/lede$ screen
+[detached from 29499.pts-0.instance-2]
+user1@instance-2:~/lede$ cat diffconfig.sh
+CONFIG_TARGET_x86=y
+CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_Generic=y
+CONFIG_ARIA2_BITTORRENT=y
+CONFIG_ARIA2_NOXML=y
+CONFIG_ARIA2_OPENSSL=y
+CONFIG_ARIA2_WEBSOCKET=y
+CONFIG_DOCKER_KERNEL_OPTIONS=y
+CONFIG_DOCKER_NET_MACVLAN=y
+CONFIG_DOCKER_RES_SHAPE=y
+CONFIG_DOCKER_STO_EXT4=y
+CONFIG_KERNEL_BLK_DEV_THROTTLING=y
+CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
+CONFIG_KERNEL_CFS_BANDWIDTH=y
+CONFIG_KERNEL_CGROUP_PERF=y
+CONFIG_KERNEL_EXT4_FS_POSIX_ACL=y
+CONFIG_KERNEL_FS_POSIX_ACL=y
+CONFIG_KERNEL_IPC_NS=y
+CONFIG_KERNEL_KEYS=y
+CONFIG_KERNEL_MEMCG_SWAP=y
+CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y
+CONFIG_KERNEL_NAMESPACES=y
+CONFIG_KERNEL_NET_NS=y
+CONFIG_KERNEL_PERF_EVENTS=y
+CONFIG_KERNEL_PID_NS=y
+CONFIG_KERNEL_USER_NS=y
+CONFIG_KERNEL_UTS_NS=y
+CONFIG_LIBCURL_COOKIES=y
+CONFIG_LIBCURL_FILE=y
+CONFIG_LIBCURL_FTP=y
+CONFIG_LIBCURL_HTTP=y
+CONFIG_LIBCURL_NO_SMB="!"
+CONFIG_LIBCURL_OPENSSL=y
+CONFIG_LIBCURL_PROXY=y
+CONFIG_PACKAGE_aria2=y
+CONFIG_PACKAGE_ariang=y
+CONFIG_PACKAGE_baidupcs-web=y
+CONFIG_PACKAGE_boost-chrono=y
+CONFIG_PACKAGE_boost-random=y
+CONFIG_PACKAGE_btrfs-progs=y
+CONFIG_PACKAGE_bzip2=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_cgroupfs-mount=y
+CONFIG_PACKAGE_containerd=y
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_docker-ce=y
+CONFIG_PACKAGE_frpc=y
+CONFIG_PACKAGE_icu=y
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_kcptun-client=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-dax=y
+CONFIG_PACKAGE_kmod-dm=y
+CONFIG_PACKAGE_kmod-dummy=y
+CONFIG_PACKAGE_kmod-ikconfig=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_kmod-lib-crc32c=y
+CONFIG_PACKAGE_kmod-macvlan=y
+CONFIG_PACKAGE_kmod-nf-ipvs=y
+CONFIG_PACKAGE_kmod-veth=y
+CONFIG_PACKAGE_libatomic=y
+CONFIG_PACKAGE_libattr=y
+CONFIG_PACKAGE_libbz2=y
+CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_libdb47=y
+CONFIG_PACKAGE_libdevmapper=y
+CONFIG_PACKAGE_libdouble-conversion=y
+CONFIG_PACKAGE_libevent2=y
+CONFIG_PACKAGE_libexpat=y
+CONFIG_PACKAGE_libffi=y
+CONFIG_PACKAGE_libgdbm=y
+CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libmount=y
+CONFIG_PACKAGE_libnetfilter-conntrack=y
+CONFIG_PACKAGE_libnettle=y
+CONFIG_PACKAGE_libnetwork=y
+CONFIG_PACKAGE_libnfnetlink=y
+CONFIG_PACKAGE_libpcap=y
+CONFIG_PACKAGE_libpcre2-16=y
+CONFIG_PACKAGE_libsqlite3=y
+CONFIG_PACKAGE_libtins=y
+CONFIG_PACKAGE_libunbound=y
+CONFIG_PACKAGE_libxml2=y
+CONFIG_PACKAGE_libyaml-cpp=y
+CONFIG_PACKAGE_libzstd=y
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-baidupcs-web=y
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-mwan3helper=y
+CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-noddos=y
+CONFIG_PACKAGE_luci-app-qbittorrent=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
+CONFIG_PACKAGE_luci-app-unbound=y
+CONFIG_PACKAGE_luci-app-watchcat=y
+CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
+CONFIG_PACKAGE_luci-lib-docker=y
+CONFIG_PACKAGE_luci-lib-json=y
+CONFIG_PACKAGE_luci-ssl-openssl=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-netgear=y
+CONFIG_PACKAGE_mktorrent=y
+CONFIG_PACKAGE_mount-utils=y
+CONFIG_PACKAGE_mwan3=y
+CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_noddos=y
+CONFIG_PACKAGE_opentracker=y
+CONFIG_PACKAGE_opentracker6=y
+CONFIG_PACKAGE_python=y
+CONFIG_PACKAGE_python-base=y
+CONFIG_PACKAGE_python-codecs=y
+CONFIG_PACKAGE_python-compiler=y
+CONFIG_PACKAGE_python-ctypes=y
+CONFIG_PACKAGE_python-db=y
+CONFIG_PACKAGE_python-decimal=y
+CONFIG_PACKAGE_python-distutils=y
+CONFIG_PACKAGE_python-email=y
+CONFIG_PACKAGE_python-gdbm=y
+CONFIG_PACKAGE_python-light=y
+CONFIG_PACKAGE_python-logging=y
+CONFIG_PACKAGE_python-multiprocessing=y
+CONFIG_PACKAGE_python-ncurses=y
+CONFIG_PACKAGE_python-openssl=y
+CONFIG_PACKAGE_python-pydoc=y
+CONFIG_PACKAGE_python-sqlite3=y
+CONFIG_PACKAGE_python-unittest=y
+CONFIG_PACKAGE_python-xml=y
+CONFIG_PACKAGE_qBittorrent=y
+CONFIG_PACKAGE_qt5-core=y
+CONFIG_PACKAGE_qt5-network=y
+CONFIG_PACKAGE_qt5-xml=y
+CONFIG_PACKAGE_rblibtorrent=y
+CONFIG_PACKAGE_runc=y
+CONFIG_PACKAGE_srelay=y
+CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_unbound-daemon=y
 CONFIG_PACKAGE_watchcat=y
 CONFIG_SQLITE_FTS3=y
